--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ $.ajax({
 	type: "get",
 	data: "",
 		url: "/",
-		contentType:"application/json",//这里设置很重要
-	    dataType: "json",
+		//contentType:"application/json",//这里设置很重要
+	    //dataType: "json",
 		success: function(data) {
 		}
 });
