--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+	<a href="/">转</a>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script type="text/javascript">
 $.ajax({
