--- a/index.html
+++ b/index.html
@@ -1,22 +1,110 @@
+<%@ page contentType="text/html; charset=UTF-8" language="java"%>
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	<a href="/">转</a>
+<div id="add-user-modal" title="添加用户" >
+  <form id="add-user-form" action="testPost" method="post">
+    <table class="modal-tbl">
+      <tr><td>tokens</td><td><input type="text" name="tokens" value="ewMs7u1dGEk:APA91bG6IlbdTOoEVHoM-EaZTMomrmRUYxFu9MgFhBjfoAFM3xbq_j1PkTlkQvnMfNa56ft4chMlCNDAHu5unGkdLI7F40-vfK8rgW9XO1mkmSpUOLmzKuImS5f6lF0uI3-fHsWmCUHL"></td></tr>
+      <tr><td>body</td><td><input type="text" name="body"></td></tr>
+      <tr><td>title</td><td><input type="text" name="title"></td></tr>
+      <tr><td>topic</td><td><input type="text" name="topic"></td></tr>
+    </table>
+    <button class="btn btn-lg btn-primary btn-block" type="button" onclick="listAllUser()">登录</button>
+  </form>
+</div>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.serializeJSON/2.9.0/jquery.serializejson.min.js"></script>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-messaging.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-analytics.js"></script>
+<!-- <script src="firebase-messaging-sw.js"></script> -->
+
+
 <script type="text/javascript">
-$.ajax({
-	type: "get",
-	data: "",
-		url: "/",
-		//contentType:"application/json",//这里设置很重要
-	    //dataType: "json",
-		success: function(data) {
-		}
+// $(function() {
+// // 	listAllUser();
+// });
+if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/firebase-messaging-sw.js');
+        });
+      }
+//Retrieve Firebase Messaging object.
+  const messaging = firebase.messaging();
+//Add the public key generated from the console here.
+  messaging.usePublicVapidKey("BNPQOeE3VlJYtzJEkyu3P96oj1fuTCcamLtJGQIaWGJIGH13LIHznLt74ggAAsbHN3F2KYLIXSanHHpM1kgp29A");
+  Notification.requestPermission().then((permission) => {
+	  if (permission === 'granted') {
+	    console.log('Notification permission granted.');
+	    // TODO(developer): Retrieve an Instance ID token for use with FCM.
+	    // ...
+	  } else {
+	    console.log('Unable to get permission to notify.');
+	  }
+	});
+//Get Instance ID token. Initially this makes a network call, once retrieved
+//subsequent calls to getToken will return from cache.
+messaging.getToken().then((currentToken) => {
+ if (currentToken) {
+	 console.log(currentToken);
+//    sendTokenToServer(currentToken);
+//    updateUIForPushEnabled(currentToken);
+ } else {
+   // Show permission request.
+   console.log('No Instance ID token available. Request permission to generate one.');
+   // Show permission UI.
+//    updateUIForPushPermissionRequired();
+//    setTokenSentToServer(false);
+ }
+}).catch((err) => {
+ console.log('An error occurred while retrieving token. ', err);
 });
+
+//Callback fired if Instance ID token is updated.
+messaging.onTokenRefresh(() => {
+  messaging.getToken().then((refreshedToken) => {
+    console.log('Token refreshed.');
+    // Indicate that the new Instance ID token has not yet been sent to the
+    // app server.
+//     setTokenSentToServer(false);
+    // Send Instance ID token to app server.
+//     sendTokenToServer(refreshedToken);
+    // ...
+  }).catch((err) => {
+    console.log('Unable to retrieve refreshed token ', err);
+//     showToken('Unable to retrieve refreshed token ', err);
+  });
+});
+messaging.onMessage((payload) => {
+	  console.log('Message received. ', payload);
+	  // ...
+	});
+function listAllUser() {
+	var id = 2;
+	var name = "dfgd";
+	
+	// 获取序列化表单信息
+	var user = $("#add-user-form").serializeJSON();
+	var testForm = JSON.stringify(user);
+	console.log(testForm);
+	$.ajax({
+    	type: "POST",
+    	data: testForm,
+  		url: "pushFireBase",
+  		contentType:"application/json",//这里设置很重要
+  	    dataType: "json",
+  		success: function(data) {
+  		}
+	});
+}
 </script>
 </body>
 </html>
